front end index fixes

--- a/01_Front_End/index.html
+++ b/01_Front_End/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assests/normalize.css">
     <link rel="stylesheet" href="assests/css/bootstrap.css">
 
-    <link rel="stylesheet" href="assests/styles/style.css">
+    <link rel="stylesheet" href="assests/styles/indexStyle.css">
 
 </head>
 <body>
@@ -34,10 +34,11 @@
                 </div>
             </li>
 
-            <a href="#" style="--i:3;">Admin</a>
+            <a href="AdminDashboard.html" style="--i:3;">Admin</a>
             <a href="#" style="--i:4;">Driver</a>
-            <a href="loginPage.html" style="--i:5;">Login</a>
             <a href="#" style="--i:6;">Register</a>
+            <a href="loginPage.html" style="--i:5;">Login</a>
+
         </nav>
 
         <div class="social-media">
@@ -49,23 +50,24 @@
     </header>
 
     <section class="home">
-        <div class="logoc">
-            <img src="assests/pic_vid/pic/LogoCar.png" alt="">
+        <div class="logoc" >
+            <img src="assests/pic_vid/pic/Screenshot__452_-removebg-preview.png" alt="">
         </div>
 
         <div class="home-content">
-            <h1>WELCOME</h1>
+            <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;WELCOME</h1>
+            &nbsp;
+            <h1> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ABOARD!</h1>
 <!--            <h3>EASY CAR RENTAL</h3>-->
-            <h3><span>E</span>ASY <span>C</span>AR <span>R</span>ENTAL</h3>
-      <!--      <video src="assests/pic_vid/videos/particles.mp4" muted="" autoplay=""></video>
-            <h3><span>E</span>ASY CAR <span>REN</span>TAL</h3>-->
+<!--            <h3><span>E</span>ASY <span>C</span>AR <span>R</span>ENTAL</h3>-->
+<!--    -->
 
 <!--            <a href="#" class="btn">Explore Cars</a>-->
         </div>
 
         <div class="home-img">
             <div class="rhombus">
-                <img src="assests/pic_vid/pic/car.png" alt="">
+                <img src="assests/pic_vid/pic/about.png" alt="">
             </div>
         </div>
 
