--- a/01_Front_End/loginPage.html
+++ b/01_Front_End/loginPage.html
@@ -9,6 +9,9 @@
     ></script>
     <title>Sign in & Sign up Form</title>
     <link rel="stylesheet" href="assests/styles/LoginPage.css">
+    <title>Twinkling Night Sky</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="container">
@@ -25,7 +28,7 @@
                     <input type="password" placeholder="Password" />
                 </div>
                 <input type="submit" value="Login" class="btn solid" />
-                <p class="social-text">Or Sign in with social platforms</p>
+                <p class="social-text">Or Sign up using social's</p>
                 <div class="social-media">
                     <a href="#" class="social-icon">
                         <i class="fab fa-facebook-f"></i>
@@ -77,7 +80,7 @@
 
 
                 <input type="submit" class="btn" value="Sign up" />
-                <p class="social-text">Or Sign up with social platforms</p>
+                <p class="social-text">Or Sign up using social's </p>
                 <div class="social-media">
                     <a href="#" class="social-icon">
                         <i class="fab fa-facebook-f"></i>
@@ -100,33 +103,28 @@
         <div class="panel left-panel">
             <div class="content">
                 <h3>New here ?</h3>
-               <!-- <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
-                    ex ratione. Aliquid!
-                </p>-->
+
                 <button class="btn transparent" id="sign-up-btn">
                     Sign up
                 </button>
             </div>
-            <img src="assests/pic_vid/pic/loginpage/lambogini.png" class="image" alt="" />
+            <img src="assests/pic_vid/pic/loginpage/banner-left.png" class="image" alt="" />
         </div>
         <div class="panel right-panel">
             <div class="content">
-                <h3>One of us ?</h3>
-               <!-- <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-                    laboriosam ad deleniti.
-                </p>-->
+                <h3>Already one of us ?</h3>
+
                 <button class="btn transparent" id="sign-in-btn">
                     Sign in
                 </button>
             </div>
-            <img src="assests/pic_vid/pic/loginpage/bugatti.png" class="image" alt="" />
+            <img src="assests/pic_vid/pic/loginpage/banner-right.png" class="image" alt="" />
         </div>
     </div>
 </div>
 
+
+
 <script src="assests/scripts/AdminController.js"></script>
-<!--<script src="app.js"></script>-->
 </body>
 </html>
