back end entities and controller

--- a/01_Front_End/AdminDashboard.html
+++ b/01_Front_End/AdminDashboard.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 <!--========Navigations=======-->
-    <div class="container">  <!--mulu page ekama open-->
-        <div class="navigation">  <!--Navigation seen open-->
+    <div class="container">  <!-- page  open-->
+        <div class="navigation">  <!--Navigation  open-->
             <ul>
                 <li>
                     <a href="#">
